--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,10 @@ jobs:
           npm install
           npm run build
 
+      - name: Check contents of frontvue/dist/
+         run: |
+          ls -la frontvue/dist/
+
       - name: Move frontend to backend
         run: |
           mv frontvue/dist/ backexpress/public/
