--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Run ESLint
         run: |
           cd frontvue
-          npm run lint
+          npm run lint -- --max-warnings=0
 
       - name: build front (dist)
         run: |
