--- a/frontvue/package.json
+++ b/frontvue/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint --max-warnings=0"
   },
   "dependencies": {
     "vue": "^3.2.13",
