stéphane fetcher - deployer en paix

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Run ESLint
         run: |
           cd frontvue
-          npm run lint -- --max-warnings=0
+          npx eslint . --ext .js,.jsx,.ts,.tsx --max-warnings=0
 
       - name: build front (dist)
         run: |
