--- a/frontvue/package.json
+++ b/frontvue/package.json
@@ -13,6 +13,7 @@
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-unit-jest": "~5.0.0",
