stéphane fetcher - deployer en paix

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Run Tests
         run: |
           cd frontvue
-          npm run test
+          npm run test:unit
 
       - name: build front (dist)
         run: |
